*************************
 Image_Graph - Changelog
*************************
Version x.y.z-alpha [2005-xxx-xx] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Added Image_Graph_Plot_Odo (thanks Maxime Delorme)
    * Added Image_Graph_DataSelector_Values (thanks Paolo)
    * Modified Image_Graph_Plot_CandleStick, it is now only necessary to specify 'open' for first point (other 'open' = previous 'close')
    * Fixed markers so that y values equal to null never shows markers
    * Fixed problem in Image_Graph_Plot_BoxWhisker causing an undefined method
    * Fixed problem with markers and horizontal plots
    * Fixed problem with axis not showing arrow-ends even if enabled
    * Fixed problem with an error "Call to a member function on a non-object..." in Common.php

Version 0.6.0-alpha [2005-Aug-27] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Added possibility to set starting angle of pie chart (at which angle does the first pieslice start) and the direction of the pies (clockwise or counter-clockwise)
    * Added Request #5031 "Horizontal Bar graphs required" - all plot types (except radar and pie) support horizontal, it is the "Plotarea" that is horizontal
    * Fixed Bug #5035 "Legend and graph color mismatch when using zeros in stacked bar"
    * Fixed Bug #5066 "Reference Notices"

Version 0.5.0-alpha [2005-Aug-08] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Major change: removed Image_Graph_Driver and subclasses and uses Image_Canvas instead, which implies:
        - Image_Graph_Color is obsolete, removing dependency on Image_Color (however Image_Canvas still depends on Image_Color)
        - Fonts are simplified (all identified by name) and implemented using Image_Graph_Font class, removing Image_Graph_Font subclasses (only subclasses!), removing Fonts/ folder
        - Added dependency on Image_Canvas