@@ -174,6 +174,7 @@ class Image_Graph_Layout extends Image_Graph_Plotarea_Element
      */
     function _push($edge, $size = '100%')
     {
+        $result = array();
         if (ereg("([0-9]*)\%", $size, $result)) {
             $this->_alignSize[$edge] = array(
                 'value' => min(100, max(0, $result[1])),
